--- a/Assist/app/src/main/res/layout/activity_contacts_list.xml
+++ b/Assist/app/src/main/res/layout/activity_contacts_list.xml
@@ -35,8 +35,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_view_clist"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/gl_view_clist" />
@@ -48,6 +49,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/amiko_semibold"
         android:text="7 Contacts"
+        android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
