--- a/Assist/app/src/main/res/layout/activity_template_list.xml
+++ b/Assist/app/src/main/res/layout/activity_template_list.xml
@@ -35,8 +35,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tlist"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/gl_view_tlist" />
