--- a/Assist/app/src/main/res/layout/recycler_list_temp.xml
+++ b/Assist/app/src/main/res/layout/recycler_list_temp.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_list_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
