--- a/Assist/app/src/main/res/layout/activity_edit_event.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_event.xml
@@ -195,5 +195,23 @@
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />
 
+    <Button
+        android:id="@+id/btn_temp_edit_groups"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="@+id/til_edit_event_groups"
+        app:layout_constraintTop_toBottomOf="@+id/til_edit_event_groups" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/cg_temp_edit_group"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/btn_temp_edit_groups">
+
+    </com.google.android.material.chip.ChipGroup>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
